fix: cards, ancho maximo & align

--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -192,33 +192,6 @@ $carousel-icon-right-active: url('#{$svg-base-right}#{$color-active}"/></svg>');
 
   // el &.cards, hace que solo aplique a las clases .card dentro de .carousel
   &.cards {
-    // Breakpoint lg = 992
-    @media (width >= 992px) {
-      // Cuando son 2 div.cards
-      .carousel-inner {
-        .carousel-item {
-          .card-items {
-            display: flex;
-
-            // Cuando son 2 div.cards
-            &:has(.card:nth-child(2):last-child) {
-              justify-content: center;
-
-              .card {
-                flex: 0 0 348px;
-                max-width: 348px;
-              }
-            }
-            // Sigue el comportamiento por defecto en 3 div.cards
-            .card {
-              flex: 1;
-              min-width: 0;
-            }
-          }
-        }
-      }
-    }
-
     @media (width < 992px) {
       .carousel-inner {
         display: flex;
@@ -229,7 +202,7 @@ $carousel-icon-right-active: url('#{$svg-base-right}#{$color-active}"/></svg>');
         align-items: stretch;
 
         .carousel-item {
-          display: contents; // ¿Que hace esto?
+          display: contents; // para poder ver el contenido de los hijos
 
           .card-items {
             display: contents;
@@ -348,6 +321,11 @@ $carousel-icon-right-active: url('#{$svg-base-right}#{$color-active}"/></svg>');
             display: flex;
             column-gap: 24px;
             align-items: stretch;
+						justify-content: start;
+
+						.card {
+							max-width: 33%;
+						}
           }
         }
       }
